--- a/MAUIMobileStarterKit/Screens/SecurityScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/SecurityScreen.xaml
@@ -2,29 +2,25 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUIMobileStarterKit.Screens.SecurityScreen"
+             NavigationPage.HasNavigationBar="False"
+             BackgroundColor="#CAF0F8"
              Title="SecurityScreen">
-    <NavigationPage.TitleView>
-        <StackLayout VerticalOptions="Center">
-            <Label VerticalTextAlignment="Center" Text="Security" TextColor="White" FontSize="Title" FontFamily="CabinBold"/>
-        </StackLayout>
-    </NavigationPage.TitleView>
     <AbsoluteLayout>
-        <Image Opacity=".5"
-         Source="backgroundvector7.png"
-         Aspect="AspectFill"
-         AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="SizeProportional"
-         HorizontalOptions="StartAndExpand"/>
         <StackLayout Padding="10" Spacing="10" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="SizeProportional" >
-            <Label Text="Security" HorizontalTextAlignment="Start" FontFamily="VinaSansRegular" FontSize="35" />
-            <Frame CornerRadius="5" BorderColor="#D7A367" Padding="20" Margin="0" BackgroundColor="Transparent">
+            <HorizontalStackLayout VerticalOptions="Center" >
+                <ImageButton Source="burgerbar.png" Aspect="AspectFit" HeightRequest="30" VerticalOptions="Center"  />
+                <Label Text="Security" HorizontalTextAlignment="Start" FontFamily="VinaSansRegular" FontSize="35" />
+            </HorizontalStackLayout>
+
+            <Frame CornerRadius="5" BorderColor="#0077B6" Padding="20" Margin="0" BackgroundColor="Transparent">
                 <VerticalStackLayout Spacing="10">
                     <Image Source="warning.png" Aspect="AspectFill" HeightRequest="50" HorizontalOptions="CenterAndExpand"/>
-                    <Label FontFamily="CabinRegular" Text="Canyoning is a dangerous activity and cannot be improvised. The writing paths in the application may contain errors or be out of date. Do not enter a canyon without knowledge of the specific technic to this sport and suitable equipment. Do not hesitate to vary your sources of information, to consult the weather forecast and the various user comments. For more information on security, go to the dedicated tab of the application." />
+                    <Label FontFamily="CabinRegular" TextColor="#0077B6" Text="Canyoning is a dangerous activity and cannot be improvised. The writing paths in the application may contain errors or be out of date. Do not enter a canyon without knowledge of the specific technic to this sport and suitable equipment. Do not hesitate to vary your sources of information, to consult the weather forecast and the various user comments. For more information on security, go to the dedicated tab of the application." />
                 </VerticalStackLayout>
             </Frame>
-            <Label Text="Some useful link" FontFamily="CabinBold" FontAttributes="Italic" TextColor="LightGray"/>
+            <Label Text="Some useful link" FontFamily="CabinBold" FontAttributes="Italic" TextColor="#0077B6"/>
             <VerticalStackLayout Spacing="20">
-                <Label LineBreakMode="WordWrap"  FontFamily="CabinBold" FontAttributes="Italic" TextColor="#D7A367">
+                <Label LineBreakMode="WordWrap"  FontFamily="CabinBold" FontAttributes="Italic" TextColor="#0077B6">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="https://www.ffme.fr/wp-content/uploads/2019/12/canyonisme-securite.pdf"  FontFamily="CabinRegular" TextDecorations="Underline">
@@ -35,7 +31,7 @@
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Label LineBreakMode="WordWrap"  FontFamily="CabinBold" FontAttributes="Italic" TextColor="#D7A367">
+                <Label LineBreakMode="WordWrap"  FontFamily="CabinBold" FontAttributes="Italic" TextColor="#0077B6">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="https://www.canyoneeringusa.com/techtips"  FontFamily="CabinRegular" TextDecorations="Underline">
@@ -46,7 +42,7 @@
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Label LineBreakMode="WordWrap"  FontFamily="CabinBold" FontAttributes="Italic" TextColor="#D7A367">
+                <Label LineBreakMode="WordWrap"  FontFamily="CabinBold" FontAttributes="Italic" TextColor="#0077B6">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="https://montanasegura.com/barranquismo-con-seguridad/"  FontFamily="CabinRegular" TextDecorations="Underline">
@@ -57,7 +53,7 @@
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Label LineBreakMode="WordWrap"  FontFamily="CabinBold" FontAttributes="Italic" TextColor="#D7A367">
+                <Label LineBreakMode="WordWrap"  FontFamily="CabinBold" FontAttributes="Italic" TextColor="#0077B6">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="https://deescalada.com/prevencion-y-seguridad-en-barranquismo"  FontFamily="CabinRegular" TextDecorations="Underline">
