add menu button

--- a/MAUIMobileStarterKit/Screens/SecurityScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/SecurityScreen.xaml
@@ -8,7 +8,7 @@
     <AbsoluteLayout>
         <StackLayout Padding="10" Spacing="10" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="SizeProportional" >
             <HorizontalStackLayout VerticalOptions="Center" >
-                <ImageButton Source="burgerbar.png" Aspect="AspectFit" HeightRequest="30" VerticalOptions="Center"  />
+                <ImageButton Source="burgerbar.png" Aspect="AspectFit" HeightRequest="30" VerticalOptions="Center" Clicked="MenuBtnClicked"  />
                 <Label Text="Security" HorizontalTextAlignment="Start" FontFamily="VinaSansRegular" FontSize="35" />
             </HorizontalStackLayout>
 
