--- a/MAUIMobileStarterKit/Screens/ContactUsPage.xaml
+++ b/MAUIMobileStarterKit/Screens/ContactUsPage.xaml
@@ -8,7 +8,7 @@
     <AbsoluteLayout>
         <StackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="SizeProportional" Padding="10,10,10,30" >
             <HorizontalStackLayout VerticalOptions="Center" >
-                <ImageButton Source="burgerbar.png" Aspect="AspectFit" HeightRequest="30" VerticalOptions="Center" Clicked="SlideNavigationClicked" />
+                <ImageButton Source="burgerbar.png" Aspect="AspectFit" HeightRequest="30" VerticalOptions="Center" Clicked="MenuBtnClicked" />
                 <Label Text="Contact Us" VerticalTextAlignment="Center" HorizontalTextAlignment="Start" FontFamily="VinaSansRegular" FontSize="35" />
             </HorizontalStackLayout>
 
