--- a/MAUIMobileStarterKit/Screens/InfoPage.xaml
+++ b/MAUIMobileStarterKit/Screens/InfoPage.xaml
@@ -8,7 +8,7 @@
     <AbsoluteLayout>
         <StackLayout Padding="10" Spacing="10" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="SizeProportional" >
             <StackLayout VerticalOptions="Center" HorizontalOptions="StartAndExpand"  Orientation="Horizontal">
-                <ImageButton Source="burgerbar.png" Aspect="AspectFit" HeightRequest="30" VerticalOptions="Center" />
+                <ImageButton Source="burgerbar.png" Aspect="AspectFit" HeightRequest="30" VerticalOptions="Center" Clicked="MenuBtnClicked"/>
                 <Label Text="Legend of the Canyons Map"  FontFamily="VinaSansRegular" FontSize="35" WidthRequest="300" />
             </StackLayout>
 
