--- a/MAUIMobileStarterKit/Screens/SettingsScreen/CreateCannyonModals/AddDescriptionModal.xaml
+++ b/MAUIMobileStarterKit/Screens/SettingsScreen/CreateCannyonModals/AddDescriptionModal.xaml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             BackgroundColor="#CAF0F8"
+             xmlns:local="clr-namespace:MAUIMobileStarterKit.CustomViews"
              x:Class="MAUIMobileStarterKit.Screens.SettingsScreen.CreateCannyonModals.AddDescriptionModal"
              Title="AddDescriptionModal">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+        <StackLayout Padding="10" VerticalOptions="FillAndExpand" Spacing="10" >
+            <ImageButton Clicked="BackBtnClicked" Source="backarrow.png" Aspect="AspectFit" HeightRequest="25" HorizontalOptions="Start" Margin="0,10"/>
+            <Frame Padding="2" >
+                <VerticalStackLayout VerticalOptions="CenterAndExpand" Spacing="20" >
+                    <local:FlatingLabel Title="Lanugae*" Margin="0,20,0,0"/>
+                    <local:FlatingLabel Title="Access*" />
+                    <local:FlatingLabel Title="Approach*" />
+                    <local:FlatingLabel Title="Descent*" />
+                    <local:FlatingLabel Title="Return trip*" />
+                    <local:FlatingLabel Title="Engagement*" />
+                    <local:FlatingLabel Title="History" />
+                    <local:FlatingLabel Title="Comment" />
+                    <local:FlatingLabel Title="Geology" />
+                    <local:FlatingLabel Title="Best period" />
+                </VerticalStackLayout>
+            </Frame>
+            <Button Text="Save Description" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="SaveDescription"/>
+
+        </StackLayout>
+
 </ContentPage>
