--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
@@ -4,7 +4,7 @@
              x:Class="MAUIMobileStarterKit.Screens.CanyoningPageScreens.TopoCanyonScreen">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Topo Sctreen"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
