--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/ResumeCanyonScreen.xaml
@@ -2,10 +2,36 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUIMobileStarterKit.Screens.CanyoningPageScreens.ResumeCanyonScreen">
-    <VerticalStackLayout>
-        <Label 
-            Text="Resume screen"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <ScrollView>
+        <StackLayout Margin="0,20,0,0" Padding="10">
+            <VerticalStackLayout Spacing="10">
+                <Button x:Name="ButtonAskForChange" Text="Update Canyon" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
+                <Grid ColumnDefinitions="Auto,*" RowDefinitions="*,*,*,*,*,*,*,*" HorizontalOptions="CenterAndExpand" >
+                    <Label TextColor="#0077B6" Grid.Column="0" Grid.Row="0" VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="15" FontAttributes="Bold" TextDecorations="Underline" Text="Name Canyon" />
+                    <Button Grid.Column="1" Grid.Row="0" Text="Modify" HorizontalOptions="CenterAndExpand" BackgroundColor="#00B4D8" CornerRadius="5" TextColor="White" FontSize="15" FontFamily="CabinBold"/>
+                    <Label Margin="0,20,0,0" Grid.Column="0" Grid.Row="1" Text="Country" FontFamily="CabinRegular" FontAttributes="Bold"  TextColor="#0077B6" FontSize="14"/>
+                    <Label Margin="0,20,0,0" Grid.Column="1" Grid.Row="1" x:Name="countryCanyon" TextColor="#00B4D8" VerticalOptions="Center" HorizontalOptions="Start" FontSize="14" Text="Nouvelle-Zélande"/>
+
+                    <Label  Grid.Column="0" Grid.Row="2" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="14" Text="Region"/>
+                    <Label Grid.Column="1" Grid.Row="2" x:Name="regionCanyon"  VerticalOptions="Center" HorizontalOptions="Start"   FontSize="14" Text="Region" TextColor="#00B4D8"/>
+
+                    <Label Grid.Column="0" Grid.Row="3" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="14" Text="State"/>
+                    <Label Grid.Column="1" Grid.Row="3" x:Name="stateCanyon"  VerticalOptions="Center" HorizontalOptions="Start" FontSize="14" Text="Departement" TextColor="#00B4D8"/>
+
+                    <Label Grid.Column="0" Grid.Row="4" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="15" Text="City"/>
+                    <Label Grid.Column="1" Grid.Row="4" x:Name="cityCanyon"   VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15" Text="Commune" TextColor="#00B4D8"/>
+
+                    <Label Grid.Column="0" Grid.Row="5"  VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="15" Text="Mountain"/>
+                    <Label Grid.Column="1" Grid.Row="5" x:Name="mountainCanyon"  VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15" Text="Massif" TextColor="#00B4D8"/>
+
+                    <Label Grid.Column="0" Grid.Row="6" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="15" Text="Bassin"/>
+                    <Label Grid.Column="1" Grid.Row="6" x:Name="bassinCanyon"  VerticalOptions="Center" HorizontalOptions="Start"  FontSize="15" Text="Bassin" TextColor="#00B4D8"/>
+
+                    <Label Grid.Column="0" Grid.Row="7" VerticalOptions="Center" HorizontalOptions="Start" TextColor="#0077B6" FontAttributes="Bold" FontSize="15" Text="River"/>
+                    <Label Grid.Column="1" Grid.Row="7" x:Name="riverCanyon"   VerticalOptions="Center" HorizontalOptions="Start"   FontSize="15" Text="Cours d'eau" TextColor="#00B4D8"/>
+
+                </Grid>
+            </VerticalStackLayout>
+        </StackLayout>
+    </ScrollView>
 </ContentView>
